--- a/BookStoreApp.API/BookStoreApp.API.csproj
+++ b/BookStoreApp.API/BookStoreApp.API.csproj
@@ -9,9 +9,13 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Expressions" Version="3.4.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Serilog.AspNetCore" />
+    <None Remove="Serilog.Expressions" />
+    <None Remove="Serilog.Sinks.Seq" />
   </ItemGroup>
 </Project>
