Přidáno Ef Core a Scuffolded db

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -6,7 +9,7 @@
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information"
       }
-  },
+    },
     "WriteTo": [
       {
         "Name": "File",
@@ -17,10 +20,10 @@
       },
       {
         "Name": "Seq",
-        "Args": { "serverUrl":  "http://localhost:5341" }
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
-    ] 
-},
+    ]
+  },
   "AllowedHosts": "*"
 }
 
