--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -24,6 +24,11 @@
       }
     ]
   },
+  "JwtSettings": {
+    "Issuer": "BookStoreAPI",
+    "Audience": "BookStoreApiClient",
+    "Duration": 1
+  },
   "AllowedHosts": "*"
 }
 
