Pridanna client side update/ edit a create a delete. + nahravani obrazku, ale nefungujou veschny.

--- a/BookStoreApp.API/BookStoreApp.API.csproj
+++ b/BookStoreApp.API/BookStoreApp.API.csproj
@@ -33,5 +33,9 @@
     <None Remove="Serilog.Sinks.Seq" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\bookcoverimages\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
